--- a/package.json
+++ b/package.json
@@ -2,24 +2,21 @@
   "name": "gta-next",
   "version": "0.1.0",
   "private": true,
+  "description": "my node app",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "node .",
+    "test": "mocha test --exit",
+    "build": "mocha test --exit"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "gray-matter": "^4.0.3",
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.7.4"
+    "chai": "4.3.6",
+    "mocha": "10.1.0",
+    "supertest": "6.3.1"
   }
 }
