--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,14 +16,19 @@
 steps:
 # Install dependencies
 - name: node
+  id: node-install
   entrypoint: npm
   args: ['install']
+  waitFor: [ " -" ]
 # Run tests
 - name: node
   entrypoint: npm
   args: ['test']
+  waitFor: [ node-install ]
 # Run custom commands
 - name: node
   entrypoint: npm
   args: ['run', 'build']
+  waitFor:
+    - node-install
 # [END cloudbuild_npm_node]
