--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -59,16 +59,16 @@ steps:
 # 8
 - name: 'gcr.io/gcp-runtimes/ubuntu_18_0_4'
   entrypoint: apt-get
-  args: ['install', 'python3.7', 'libyaml-dev', 'python3-setuptools', '-y']
+  args: ['install', 'python3.7 libyaml-dev python3-setuptools -y']
 # 9
 - name: python
   entrypoint: python3
   args: [ 'get-pip.py', 'pip==22']
-# 9 
+# 10
 - name: python
   entrypoint: pip3
   args: ["install", "virtualenv"]
-# 10
+# 11
 - name: python
   entrypoint: pip3
   args: ["install", "-r", "requirements.txt"]
