--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -57,17 +57,17 @@ steps:
   entrypoint: apt-get
   args: ['update']
 # 8
-- name: 'gcr.io/gcp-runtimes/ubuntu_18_0_4'
-  entrypoint: apt-get
-  args: ['install', 'python3.7 libyaml-dev python3-setuptools -y']
+# - name: 'gcr.io/gcp-runtimes/ubuntu_18_0_4'
+#   entrypoint: apt-get
+#   args: ['install', 'python3.7 libyaml-dev python3-setuptools -y']
 # 9
 - name: python
   entrypoint: python3
-  args: [ 'get-pip.py', 'pip==22']
+  args: [ 'get-pip.py pip==22']
 # 10
 - name: python
   entrypoint: pip3
-  args: ["install", "virtualenv"]
+  args: ['install virtualenv']
 # 11
 - name: python
   entrypoint: pip3
