--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -63,7 +63,7 @@ steps:
 # 9
 - name: python
   entrypoint: python3
-  args: [ 'get-pip.py pip==22']
+  args: [ '/workspace/get-pip.py pip==22']
 # 10
 - name: python
   entrypoint: pip3
@@ -71,5 +71,5 @@ steps:
 # 11
 - name: python
   entrypoint: pip3
-  args: ["install", "-r", "requirements.txt"]
+  args: ["install -r /workspace/requirements.txt"]
 # [END cloudbuild_npm_node]
