--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,69 @@
-apache-beam==2.27.0
-appdirs==1.4.4
-attrs==20.3.0
-avro-python3==1.9.2.1
-cachetools==4.2.1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-crcmod==1.7
-dill==0.3.1.1
-distlib==0.3.1
-docopt==0.6.2
-Faker==6.5.0
-fastavro==1.3.2
-fasteners==0.16
-filelock==3.0.12
-future==0.18.2
-google-api-core==1.26.0
-google-apitools==0.5.31
-google-auth==1.27.0
-google-cloud-bigquery==2.10.0
-google-cloud-bigtable==1.7.0
-google-cloud-core==1.6.0
-google-cloud-datastore==2.1.0
-google-cloud-firestore==2.0.2
-importlib-metadata==4.8
-google-cloud-pubsub==2.4.0
-google-cloud-storage==1.36.1
-google-crc32c==1.1.2
-google-resumable-media==1.2.0
-googleapis-common-protos==1.53.0
-grpc-google-iam-v1==0.12.3
-grpcio==1.36.1
-hdfs==2.6.0
-httplib2==0.17.4
-idna==2.10
-iniconfig==1.1.1
-libcst==0.3.17
-mock==2.0.0
-mypy-extensions==0.4.3
-nose==1.3.7
-numpy==1.20.1
-oauth2client==4.1.3
-packaging==20.9
-pbr==5.5.1
-pluggy==0.13.1
-proto-plus==1.14.2
-protobuf==3.15.3
-py==1.10.0
-pyarrow==2.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydot==1.4.2
-pymongo==3.11.3
-pyparsing==2.4.7
-pytest==6.2.2
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
-rsa==4.7.2
-six==1.15.0
-text-unidecode==1.3
-toml==0.10.2
-tox==3.23.0
-typing-extensions==3.7.4.3
-typing-inspect==0.6.0
-urllib3==1.26.3
-virtualenv==20.4.2
+apache-beam
+appdirs
+attrs
+avro-python3
+cachetools
+certifi
+cffi
+chardet
+crcmod
+dill
+distlib
+docopt
+Faker
+fastavro
+fasteners
+filelock
+future
+google-api-core
+google-apitools
+google-auth
+google-cloud-bigquery
+google-cloud-bigtable
+google-cloud-core
+google-cloud-datastore
+google-cloud-firestore
+importlib-metadata
+google-cloud-pubsub
+google-cloud-storage
+google-crc32c
+google-resumable-media
+googleapis-common-protos
+grpc-google-iam-v1
+grpcio
+hdfs
+httplib2
+idna
+iniconfig
+libcst
+mock
+mypy-extensions
+nose
+numpy
+oauth2client
+packaging
+pbr
+pluggy
+proto-plus
+protobuf
+py
+pyarrow
+pyasn1
+pyasn1-modules
+pycparser
+pydot
+pymongo
+pyparsing
+pytest
+python-dateutil
+pytz
+PyYAML
+requests
+rsa
+six
+text-unidecode
+toml
+tox
+typing-extensions
+typing-inspect
+urllib3
