--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -59,10 +59,10 @@ steps:
   entrypoint: python3
   args: ["--version"]
 # 11
-- name: python
-  id: Install Dependencies
-  entrypoint: pip
-  args: ["install", "-r", "requirements.txt", "--user"]
+# - name: python
+#   id: Install Dependencies
+#   entrypoint: pip
+#   args: ["install", "-r", "requirements.txt", "--user"]
 ###Build App Ends here###
 
 ###Build Hosting####
@@ -115,7 +115,7 @@ steps:
 - name: node
   id: node-install function
   entrypoint: yarn
-  args: ["install --production=false '--force'"]
+  args: ["install --production=false --force"]
 # - name: node
 #   id: Run Typecheck
 #   entrypoint: npm
@@ -269,7 +269,7 @@ steps:
   args:
     - -c 
     - |
-      echo "name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'ing Webpack Build" && \
+      echo "Running Webpack Build" && \
       node --max_old_space_size=3072 ./node_modules/.bin/webpack --env prod=true --env ci=true --progress
 - name: node
   entrypoint: npm
@@ -279,7 +279,7 @@ steps:
     - -c 
     - |
       echo "Copying Resources" && \
-      name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'copy-build-resources
+      run copy-build-resources
 # - name: 'gcr.io/$PROJECT_ID/firebase'
 #   id: Deploying Firebase Hosting
 #   args: ['deploy', '--project=$PROJECT_ID', '--only=hosting']
