--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -133,9 +133,12 @@ steps:
 
 ###Build Dataflow###
 - name: 'python'
-  id: Run Tests using tox
+  id: Install tox
   entrypoint: pip
-  args: [ 'install', 'tox', && 'tox']
+  args: [ 'install', 'tox']
+- name: 'python'
+  id: Run Tests using tox
+  args: ['tox']
 ###Build Dataflow ends here###
 
 ###Deploy Dataflow###
