--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "chai": "4.3.6",
     "mocha": "10.1.0",
-    "supertest": "6.3.1"
+    "supertest": "6.3.1",
+    "webpack-cli": "^4.10.0"
   }
 }
