--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,14 +15,12 @@
 steps:
 ###BurpSuite Scan###
 - name: 'gcr.io/cloud-builders/docker'
-  env:
-    - '_DASTARDLY_TARGET_URL=https://ginandjuice.shop'
   entrypoint: 'bash'
   args:
       - -c
       - |
         docker run --user $(id -u) --rm -v $(pwd):/dastardly -e \
-        DASTARDLY_TARGET_URL=${_DASTARDLY_TARGET_URL} \
+        DASTARDLY_TARGET_URL=https://ginandjuice.shop -e \
         DASTARDLY_OUTPUT_FILE=/workspace/dastardly/dastardly-report.xml \
         public.ecr.aws/portswigger/dastardly:latest
 - id: "Read Values"
