--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,7 +19,7 @@ steps:
   args:
   - '-c'
   - |
-    ls ./workspace
+    ls /workspace
 - name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'bash'
   args:
