--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,7 +25,7 @@ steps:
   args:
       - -c
       - |
-        docker run --user $(id -u) --rm -volume $(pwd):/dastardly -e \
+        docker run --user $(id -u) --rm -v $(pwd):/dastardly -e \
         DASTARDLY_TARGET_URL=https://ginandjuice.shop -e \
         DASTARDLY_OUTPUT_FILE=/workspace/dastardly-report.xml \
         public.ecr.aws/portswigger/dastardly:latest
