--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,16 +24,16 @@ steps:
     ls dastardly-report.xml
     chmod a+w dastardly-report.xml
     ls -l
-# - name: 'gcr.io/cloud-builders/docker'
-#   entrypoint: 'bash'
-#   args:
-#       - -c
-#       - |
-#         docker run --user $(id -u) --rm -v $(pwd):/dastardly -e \
-#         DASTARDLY_TARGET_URL=https://ginandjuice.shop -e \
-#         DASTARDLY_OUTPUT_FILE=/workspace/dastardly-report.xml \
-#         public.ecr.aws/portswigger/dastardly:latest
-  # allowExitCodes: [0]
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args:
+      - -c
+      - |
+        docker run --user $(id -u) --rm -v $(pwd):/dastardly -e \
+        DASTARDLY_TARGET_URL=https://ginandjuice.shop -e \
+        DASTARDLY_OUTPUT_FILE=/workspace/dastardly-report.xml \
+        public.ecr.aws/portswigger/dastardly:latest
+  allowExitCodes: [0]
 # - id: "Read Values"
 #   name: ubuntu
 #   entrypoint: bash
